<resources>
    <string name="app_name">TaksManager</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Task Manager</string>
    <string name="username_edt">Username</string>
    <string name="password_edt">Password</string>
    <string name="email_edt">Email</string>
    <string name="age_edt">Age</string>
    <string name="admin_check_box">Admin ?</string>
    <string name="title_toolbar">Hello</string>
    <string name="log_out_menu">Log out</string>
    <string name="title_edt">Title</string>
    <string name="description_edt">Description</string>
    <string name="todo_chips">TODO</string>
    <string name="doing_chips">DOING</string>
    <string name="done_chips">DONE</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="delete_btn">Delete</string>
    <string name="edit_btn">Edit</string>
    <string name="remove_task_text">Do you want delete this task ?</string>
    <string name="no_txt">No</string>
    <string name="yes_txt">Yes</string>
    <string name="task_not_exist">You Dont Have Any Task</string>
    <string name="delete_all_task">Do you want delete all tasks ?</string>
    <string name="no_permision_image_user">There is No Permission ! Access Denied</string>
    <string name="update_user_btn">Update User</string>
    <string name="choose_image">Choose Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image">Select a image</string>
    <string name="profile_list">Profile List</string>
    <string name="search">Search</string>
</resources>
