<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddTaskFragment">


    <com.google.android.material.card.MaterialCardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout

            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/title_edt"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/text_input_layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:theme="@style/EditTextHint"
                    android:id="@+id/title_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/description_edt"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/text_input_layout_description"
                android:layout_below="@id/text_input_layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textMultiLine"
                    android:theme="@style/EditTextHint"
                    android:id="@+id/description_edt"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                app:backgroundTint="@color/colorBlue"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:id="@+id/date_btn"
                android:layout_below="@+id/text_input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/time_btn"
                app:backgroundTint="@color/colorBlue"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_below="@id/date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.ChipGroup
                android:layout_margin="8dp"
                android:layout_below="@id/time_btn"
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/todo_chips"
                    android:text="@string/todo_chips"
                    style="@style/CustomChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/doing_chips"
                    android:text="@string/doing_chips"
                    style="@style/CustomChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <com.google.android.material.chip.Chip
                    android:id="@+id/done_chips"
                    android:text="@string/done_chips"
                    style="@style/CustomChipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:text="@string/save_btn"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />


        <com.google.android.material.button.MaterialButton
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_toLeftOf="@id/save_btn"
            android:layout_toRightOf="@id/cancel_btn"
            android:layout_below="@id/chip_group"
            android:id="@+id/choose_image_btn"
            android:text="@string/choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                android:text="@string/cancel_btn"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>