<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddTaskFragment">


    <com.google.android.material.card.MaterialCardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/task_image"
                android:src="@drawable/task_image_holder"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>

            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:layout_margin="4dp"
                    android:id="@+id/cancel_btn"
                    android:text="@string/cancel_btn"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_margin="4dp"
                    android:id="@+id/save_btn"
                    android:text="@string/save_btn"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/galary_btn"
                    android:layout_margin="4dp"
                    android:text="@string/gallery"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/capture_btn"
                    android:layout_margin="4dp"
                    android:text="@string/camera"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>