<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DeleteFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <ImageView

                android:id="@+id/trash_image"
                android:src="@drawable/delete_trash"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

        <TextView
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/remove_task_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:text="@string/no_txt"
                android:layout_marginEnd="64dp"
                android:layout_weight="1"
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp" />

            <com.google.android.material.button.MaterialButton
                android:text="@string/yes_txt"
                android:layout_marginStart="64dp"
                android:layout_weight="1"
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>